# AndroidDemo

./: settings.gradle  upload.gradle
JavaDemo/: settings.gradle
JavaDemo/thread/: build.gradle
JavaDemo/thread/src/main/: AndroidManifest.xml
app/: ExtraConfig.gradle  build.gradle
app/src/androidTest/java/com/pig/android/demo/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/pig/android/demo/: App.kt  ContainerActivity.kt  (+2 more)
app/src/main/res/drawable-anydpi-v24/: ic_stat_name.xml
app/src/main/res/layout/: activity_android11.xml  activity_auto_complete_input.xml  activity_container.xml  activity_main.xml  fragment_button.xml  fragment_camera.xml  fragment_clazz_load.xml  fragment_collapsing.xml  fragment_condition.xml  fragment_coordinator.xml  fragment_detatil.xml  fragment_image_build.xml  fragment_info.xml  fragment_proxy.xml  fragment_text_container.xml  item_main.xml  view_to_build_image.xml
app/src/main/res/values/: string-arrays.xml  strings.xml
app/src/main/res/xml/: settings.xml
buildSrc/: build.gradle
extra/lint/: settings.gradle
extra/lint/checks/: build.gradle
extra/lint/lint/: build.gradle
extra/lint/lint/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
native/: CMakeLists.txt  build.gradle
native/src/main/: AndroidManifest.xml
native/src/main/cpp/: demo.cpp  demo.h
native2/: CMakeLists.txt  build.gradle
native2/src/androidTest/java/com/android/pig/jni/: ExampleInstrumentedTest.kt
native2/src/main/: AndroidManifest.xml
native2/src/main/cpp/: test_static.cpp  test_static.h  use_static_case.cpp  use_static_case.h
native2/src/test/java/com/android/pig/jni/: ExampleUnitTest.kt
opencv/: CMakeLists.txt  build.gradle
opencv/src/androidTest/java/com/pig/android/opencv/: ExampleInstrumentedTest.kt
opencv/src/main/: AndroidManifest.xml
opencv/src/main/cpp/: opencv_case.cpp  opencv_case.h
opencv/src/main/java/com/pig/android/opencv/: OpencvCaseUtil.kt
opencv/src/test/java/com/pig/android/opencv/: ExampleUnitTest.kt
plugin/src/main/: AndroidManifest.xml
plugin_test/: build.gradle
plugin_test/src/main/: AndroidManifest.xml
plugin_test_2/: build.gradle
plugin_test_2/src/main/: AndroidManifest.xml
plugin_test_2/src/main/res/layout/: dialog_plugin.xml
resid/src/main/: AndroidManifest.xml
resid/src/main/res/layout/: dialog_test.xml
resid/src/main/res/values/: strings.xml
task/src/main/: AndroidManifest.xml
(+85 files in other folders)
